[package]
name = "raytrace"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"
rand = { version = "0.9.1", features = ["small_rng"] }

[profile.release]
debug = 1
codegen-units = 1
lto = true
